deployment/1-deployment-backend-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-user
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: backend-user
  template:
    metadata:
      labels:
        appname: backend-user
    spec:
      containers:
      - name: backend-user
        image: backend-user:v0.1.1
        ports:
        - containerPort: 3001
