deployment/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-engine
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      appname: backend-engine
  template:
    metadata:
      labels:
        appname: backend-engine
    spec:
      containers:
      - name: backend-app
        image: backend-app:v0.1.1
        ports:
        - containerPort: 3000
      - name: backend-user
        image: backend-user:v0.1.1
        ports:
        - containerPort: 3001
