deployment/2-service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    appname: backend-app
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
