deployment/2-service-user.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-user-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    appname: backend-user
  ports:
  - name: http
    protocol: TCP
    port: 3001
    targetPort: 3001
