deployment/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
  namespace: default
spec:
  type: NodePort
  selector:
    appname: backend-engine
  ports:
  - name: http
    protocol: TCP
    port: 3000
    nodePort: 30000


---
apiVersion: v1
kind: Service
metadata:
  name: backend-user-service
  namespace: default
spec:
  type: NodePort
  selector:
    appname: backend-engine
  ports:
  - name: http
    protocol: TCP
    port: 3001
    nodePort: 30001
